parser.output
   0  $accept : %entry% $end

   1  program : decls EOF

   2  decls :
   3        | decls fdecl
   4        | decls stdecl

   5  fdecl : FUNCTION ID LPARE formals_opt RPARE LBRACE stmt_list RBRACE

   6  stdecl : STRUCT ID LBRACE formal_list RBRACE

   7  formals_opt :
   8              | formal_list

   9  formal_list : typ ID
  10              | formal_list COMMA typ ID

  11  typ : INT
  12      | FLOAT
  13      | BOOLEAN
  14      | MATRIX
  15      | STRING

  16  stmt_list :
  17            | stmt_list stmt

  18  stmt : expr_opt SEMICOL
  19       | RETURN expr SEMICOL
  20       | LBRACE stmt_list RBRACE
  21       | IF LPARE expr RPARE stmt
  22       | IF LPARE expr RPARE stmt ELSE stmt
  23       | FOR LPARE expr SEMICOL expr SEMICOL expr RPARE stmt
  24       | WHILE LPARE expr RPARE stmt
  25       | typ ID SEMICOL
  26       | typ ID ASSIGN expr SEMICOL
  27       | typ ID LBRACK INT_LITERAL COMMA INT_LITERAL RBRACK
  28       | STRUCT ID ASSIGN ID LPARE expr_opt RPARE

  29  expr_opt :
  30           | expr

  31  expr : INT_LITERAL
  32       | STRING_LITERAL
  33       | FLOAT_LITERAL
  34       | mat_literal
  35       | TRUE
  36       | FALSE
  37       | ID
  38       | ID DOT ID
  39       | expr PLUS expr
  40       | expr MINUS expr
  41       | expr TIMES expr
  42       | expr DIVIDE expr
  43       | expr ADDONE
  44       | expr MINUSONE
  45       | expr ELETIMES expr
  46       | expr ELEDIVIDE expr
  47       | expr EQUAL expr
  48       | expr NEQUAL expr
  49       | expr LT expr
  50       | expr NGT expr
  51       | expr GT expr
  52       | expr NLT expr
  53       | expr AND expr
  54       | expr OR expr
  55       | expr COMMA expr
  56       | MINUS expr
  57       | NOT expr
  58       | expr ASSIGN expr
  59       | ID LBRACK expr RBRACK LBRACK expr RBRACK
  60       | ID LPARE expr_opt RPARE
  61       | LPARE expr RPARE
  62       | expr COL
  63       | expr COL expr
  64       | COL expr
  65       | COL

  66  mat_literal : LBRACK RBRACK
  67              | LBRACK mat_assembly RBRACK

  68  mat_assembly : ele
  69               | mat_assembly COMMA ele
  70               | mat_assembly SEMICOL ele

  71  ele : FLOAT_LITERAL
  72      | MINUS FLOAT_LITERAL

  73  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (73)
	decls : .  (2)

	.  reduce 2

	program  goto 3
	decls  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	%entry% : '\001' program .  (73)

	.  reduce 73


state 4
	program : decls . EOF  (1)
	decls : decls . fdecl  (3)
	decls : decls . stdecl  (4)

	FUNCTION  shift 5
	STRUCT  shift 6
	EOF  shift 7
	.  error

	fdecl  goto 8
	stdecl  goto 9


state 5
	fdecl : FUNCTION . ID LPARE formals_opt RPARE LBRACE stmt_list RBRACE  (5)

	ID  shift 10
	.  error


state 6
	stdecl : STRUCT . ID LBRACE formal_list RBRACE  (6)

	ID  shift 11
	.  error


state 7
	program : decls EOF .  (1)

	.  reduce 1


state 8
	decls : decls fdecl .  (3)

	.  reduce 3


state 9
	decls : decls stdecl .  (4)

	.  reduce 4


state 10
	fdecl : FUNCTION ID . LPARE formals_opt RPARE LBRACE stmt_list RBRACE  (5)

	LPARE  shift 12
	.  error


state 11
	stdecl : STRUCT ID . LBRACE formal_list RBRACE  (6)

	LBRACE  shift 13
	.  error


state 12
	fdecl : FUNCTION ID LPARE . formals_opt RPARE LBRACE stmt_list RBRACE  (5)
	formals_opt : .  (7)

	MATRIX  shift 14
	INT  shift 15
	FLOAT  shift 16
	BOOLEAN  shift 17
	STRING  shift 18
	RPARE  reduce 7

	formals_opt  goto 19
	formal_list  goto 20
	typ  goto 21


state 13
	stdecl : STRUCT ID LBRACE . formal_list RBRACE  (6)

	MATRIX  shift 14
	INT  shift 15
	FLOAT  shift 16
	BOOLEAN  shift 17
	STRING  shift 18
	.  error

	formal_list  goto 22
	typ  goto 21


state 14
	typ : MATRIX .  (14)

	.  reduce 14


state 15
	typ : INT .  (11)

	.  reduce 11


state 16
	typ : FLOAT .  (12)

	.  reduce 12


state 17
	typ : BOOLEAN .  (13)

	.  reduce 13


state 18
	typ : STRING .  (15)

	.  reduce 15


state 19
	fdecl : FUNCTION ID LPARE formals_opt . RPARE LBRACE stmt_list RBRACE  (5)

	RPARE  shift 23
	.  error


state 20
	formals_opt : formal_list .  (8)
	formal_list : formal_list . COMMA typ ID  (10)

	COMMA  shift 24
	RPARE  reduce 8


state 21
	formal_list : typ . ID  (9)

	ID  shift 25
	.  error


state 22
	stdecl : STRUCT ID LBRACE formal_list . RBRACE  (6)
	formal_list : formal_list . COMMA typ ID  (10)

	RBRACE  shift 26
	COMMA  shift 24
	.  error


state 23
	fdecl : FUNCTION ID LPARE formals_opt RPARE . LBRACE stmt_list RBRACE  (5)

	LBRACE  shift 27
	.  error


state 24
	formal_list : formal_list COMMA . typ ID  (10)

	MATRIX  shift 14
	INT  shift 15
	FLOAT  shift 16
	BOOLEAN  shift 17
	STRING  shift 18
	.  error

	typ  goto 28


state 25
	formal_list : typ ID .  (9)

	.  reduce 9


state 26
	stdecl : STRUCT ID LBRACE formal_list RBRACE .  (6)

	.  reduce 6


state 27
	fdecl : FUNCTION ID LPARE formals_opt RPARE LBRACE . stmt_list RBRACE  (5)
	stmt_list : .  (16)

	.  reduce 16

	stmt_list  goto 29


state 28
	formal_list : formal_list COMMA typ . ID  (10)

	ID  shift 30
	.  error


state 29
	fdecl : FUNCTION ID LPARE formals_opt RPARE LBRACE stmt_list . RBRACE  (5)
	stmt_list : stmt_list . stmt  (17)
	expr_opt : .  (29)

	MINUS  shift 31
	LPARE  shift 32
	LBRACE  shift 33
	RBRACE  shift 34
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	IF  shift 38
	FOR  shift 39
	WHILE  shift 40
	RETURN  shift 41
	STRUCT  shift 42
	MATRIX  shift 14
	INT  shift 15
	FLOAT  shift 16
	BOOLEAN  shift 17
	STRING  shift 18
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	SEMICOL  reduce 29

	typ  goto 49
	stmt  goto 50
	expr_opt  goto 51
	expr  goto 52
	mat_literal  goto 53


state 30
	formal_list : formal_list COMMA typ ID .  (10)

	.  reduce 10


state 31
	expr : MINUS . expr  (56)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 54
	mat_literal  goto 53


state 32
	expr : LPARE . expr RPARE  (61)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 55
	mat_literal  goto 53


state 33
	stmt : LBRACE . stmt_list RBRACE  (20)
	stmt_list : .  (16)

	.  reduce 16

	stmt_list  goto 56


state 34
	fdecl : FUNCTION ID LPARE formals_opt RPARE LBRACE stmt_list RBRACE .  (5)

	.  reduce 5


state 35
	mat_literal : LBRACK . RBRACK  (66)
	mat_literal : LBRACK . mat_assembly RBRACK  (67)

	MINUS  shift 57
	RBRACK  shift 58
	FLOAT_LITERAL  shift 59
	.  error

	mat_assembly  goto 60
	ele  goto 61


state 36
	expr : NOT . expr  (57)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 62
	mat_literal  goto 53


state 37
	expr : COL . expr  (64)
	expr : COL .  (65)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	PLUS  reduce 65
	TIMES  reduce 65
	DIVIDE  reduce 65
	ADDONE  reduce 65
	MINUSONE  reduce 65
	ELETIMES  reduce 65
	ELEDIVIDE  reduce 65
	RPARE  reduce 65
	RBRACK  reduce 65
	AND  reduce 65
	OR  reduce 65
	COMMA  reduce 65
	SEMICOL  reduce 65
	ASSIGN  reduce 65
	EQUAL  reduce 65
	NEQUAL  reduce 65
	GT  reduce 65
	NLT  reduce 65
	LT  reduce 65
	NGT  reduce 65

	expr  goto 63
	mat_literal  goto 53


state 38
	stmt : IF . LPARE expr RPARE stmt  (21)
	stmt : IF . LPARE expr RPARE stmt ELSE stmt  (22)

	LPARE  shift 64
	.  error


state 39
	stmt : FOR . LPARE expr SEMICOL expr SEMICOL expr RPARE stmt  (23)

	LPARE  shift 65
	.  error


state 40
	stmt : WHILE . LPARE expr RPARE stmt  (24)

	LPARE  shift 66
	.  error


state 41
	stmt : RETURN . expr SEMICOL  (19)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 67
	mat_literal  goto 53


state 42
	stmt : STRUCT . ID ASSIGN ID LPARE expr_opt RPARE  (28)

	ID  shift 68
	.  error


state 43
	expr : TRUE .  (35)

	.  reduce 35


state 44
	expr : FALSE .  (36)

	.  reduce 36


state 45
	expr : INT_LITERAL .  (31)

	.  reduce 31


state 46
	expr : FLOAT_LITERAL .  (33)

	.  reduce 33


state 47
	expr : STRING_LITERAL .  (32)

	.  reduce 32


state 48
	expr : ID .  (37)
	expr : ID . DOT ID  (38)
	expr : ID . LBRACK expr RBRACK LBRACK expr RBRACK  (59)
	expr : ID . LPARE expr_opt RPARE  (60)

	LPARE  shift 69
	LBRACK  shift 70
	DOT  shift 71
	PLUS  reduce 37
	MINUS  reduce 37
	TIMES  reduce 37
	DIVIDE  reduce 37
	ADDONE  reduce 37
	MINUSONE  reduce 37
	ELETIMES  reduce 37
	ELEDIVIDE  reduce 37
	RPARE  reduce 37
	RBRACK  reduce 37
	AND  reduce 37
	OR  reduce 37
	COMMA  reduce 37
	SEMICOL  reduce 37
	COL  reduce 37
	ASSIGN  reduce 37
	EQUAL  reduce 37
	NEQUAL  reduce 37
	GT  reduce 37
	NLT  reduce 37
	LT  reduce 37
	NGT  reduce 37


state 49
	stmt : typ . ID SEMICOL  (25)
	stmt : typ . ID ASSIGN expr SEMICOL  (26)
	stmt : typ . ID LBRACK INT_LITERAL COMMA INT_LITERAL RBRACK  (27)

	ID  shift 72
	.  error


state 50
	stmt_list : stmt_list stmt .  (17)

	.  reduce 17


state 51
	stmt : expr_opt . SEMICOL  (18)

	SEMICOL  shift 73
	.  error


state 52
	expr_opt : expr .  (30)
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . ADDONE  (43)
	expr : expr . MINUSONE  (44)
	expr : expr . ELETIMES expr  (45)
	expr : expr . ELEDIVIDE expr  (46)
	expr : expr . EQUAL expr  (47)
	expr : expr . NEQUAL expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . NGT expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . NLT expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : expr . COMMA expr  (55)
	expr : expr . ASSIGN expr  (58)
	expr : expr . COL  (62)
	expr : expr . COL expr  (63)

	PLUS  shift 74
	MINUS  shift 75
	TIMES  shift 76
	DIVIDE  shift 77
	ADDONE  shift 78
	MINUSONE  shift 79
	ELETIMES  shift 80
	ELEDIVIDE  shift 81
	AND  shift 82
	OR  shift 83
	COMMA  shift 84
	COL  shift 85
	ASSIGN  shift 86
	EQUAL  shift 87
	NEQUAL  shift 88
	GT  shift 89
	NLT  shift 90
	LT  shift 91
	NGT  shift 92
	RPARE  reduce 30
	SEMICOL  reduce 30


state 53
	expr : mat_literal .  (34)

	.  reduce 34


state 54
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . ADDONE  (43)
	expr : expr . MINUSONE  (44)
	expr : expr . ELETIMES expr  (45)
	expr : expr . ELEDIVIDE expr  (46)
	expr : expr . EQUAL expr  (47)
	expr : expr . NEQUAL expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . NGT expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . NLT expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : expr . COMMA expr  (55)
	expr : MINUS expr .  (56)
	expr : expr . ASSIGN expr  (58)
	expr : expr . COL  (62)
	expr : expr . COL expr  (63)

	.  reduce 56


state 55
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . ADDONE  (43)
	expr : expr . MINUSONE  (44)
	expr : expr . ELETIMES expr  (45)
	expr : expr . ELEDIVIDE expr  (46)
	expr : expr . EQUAL expr  (47)
	expr : expr . NEQUAL expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . NGT expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . NLT expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : expr . COMMA expr  (55)
	expr : expr . ASSIGN expr  (58)
	expr : LPARE expr . RPARE  (61)
	expr : expr . COL  (62)
	expr : expr . COL expr  (63)

	PLUS  shift 74
	MINUS  shift 75
	TIMES  shift 76
	DIVIDE  shift 77
	ADDONE  shift 78
	MINUSONE  shift 79
	ELETIMES  shift 80
	ELEDIVIDE  shift 81
	RPARE  shift 93
	AND  shift 82
	OR  shift 83
	COMMA  shift 84
	COL  shift 85
	ASSIGN  shift 86
	EQUAL  shift 87
	NEQUAL  shift 88
	GT  shift 89
	NLT  shift 90
	LT  shift 91
	NGT  shift 92
	.  error


state 56
	stmt_list : stmt_list . stmt  (17)
	stmt : LBRACE stmt_list . RBRACE  (20)
	expr_opt : .  (29)

	MINUS  shift 31
	LPARE  shift 32
	LBRACE  shift 33
	RBRACE  shift 94
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	IF  shift 38
	FOR  shift 39
	WHILE  shift 40
	RETURN  shift 41
	STRUCT  shift 42
	MATRIX  shift 14
	INT  shift 15
	FLOAT  shift 16
	BOOLEAN  shift 17
	STRING  shift 18
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	SEMICOL  reduce 29

	typ  goto 49
	stmt  goto 50
	expr_opt  goto 51
	expr  goto 52
	mat_literal  goto 53


state 57
	ele : MINUS . FLOAT_LITERAL  (72)

	FLOAT_LITERAL  shift 95
	.  error


state 58
	mat_literal : LBRACK RBRACK .  (66)

	.  reduce 66


state 59
	ele : FLOAT_LITERAL .  (71)

	.  reduce 71


state 60
	mat_literal : LBRACK mat_assembly . RBRACK  (67)
	mat_assembly : mat_assembly . COMMA ele  (69)
	mat_assembly : mat_assembly . SEMICOL ele  (70)

	RBRACK  shift 96
	COMMA  shift 97
	SEMICOL  shift 98
	.  error


state 61
	mat_assembly : ele .  (68)

	.  reduce 68


state 62
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . ADDONE  (43)
	expr : expr . MINUSONE  (44)
	expr : expr . ELETIMES expr  (45)
	expr : expr . ELEDIVIDE expr  (46)
	expr : expr . EQUAL expr  (47)
	expr : expr . NEQUAL expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . NGT expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . NLT expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : expr . COMMA expr  (55)
	expr : NOT expr .  (57)
	expr : expr . ASSIGN expr  (58)
	expr : expr . COL  (62)
	expr : expr . COL expr  (63)

	.  reduce 57


state 63
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . ADDONE  (43)
	expr : expr . MINUSONE  (44)
	expr : expr . ELETIMES expr  (45)
	expr : expr . ELEDIVIDE expr  (46)
	expr : expr . EQUAL expr  (47)
	expr : expr . NEQUAL expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . NGT expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . NLT expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : expr . COMMA expr  (55)
	expr : expr . ASSIGN expr  (58)
	expr : expr . COL  (62)
	expr : expr . COL expr  (63)
	expr : COL expr .  (64)

	PLUS  shift 74
	MINUS  shift 75
	TIMES  shift 76
	DIVIDE  shift 77
	ADDONE  shift 78
	MINUSONE  shift 79
	ELETIMES  shift 80
	ELEDIVIDE  shift 81
	AND  shift 82
	OR  shift 83
	EQUAL  shift 87
	NEQUAL  shift 88
	GT  shift 89
	NLT  shift 90
	LT  shift 91
	NGT  shift 92
	RPARE  reduce 64
	RBRACK  reduce 64
	COMMA  reduce 64
	SEMICOL  reduce 64
	ASSIGN  reduce 64


state 64
	stmt : IF LPARE . expr RPARE stmt  (21)
	stmt : IF LPARE . expr RPARE stmt ELSE stmt  (22)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 99
	mat_literal  goto 53


state 65
	stmt : FOR LPARE . expr SEMICOL expr SEMICOL expr RPARE stmt  (23)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 100
	mat_literal  goto 53


state 66
	stmt : WHILE LPARE . expr RPARE stmt  (24)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 101
	mat_literal  goto 53


state 67
	stmt : RETURN expr . SEMICOL  (19)
	expr : expr . PLUS expr  (39)
	expr : expr . MINUS expr  (40)
	expr : expr . TIMES expr  (41)
	expr : expr . DIVIDE expr  (42)
	expr : expr . ADDONE  (43)
	expr : expr . MINUSONE  (44)
	expr : expr . ELETIMES expr  (45)
	expr : expr . ELEDIVIDE expr  (46)
	expr : expr . EQUAL expr  (47)
	expr : expr . NEQUAL expr  (48)
	expr : expr . LT expr  (49)
	expr : expr . NGT expr  (50)
	expr : expr . GT expr  (51)
	expr : expr . NLT expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : expr . COMMA expr  (55)
	expr : expr . ASSIGN expr  (58)
	expr : expr . COL  (62)
	expr : expr . COL expr  (63)

	PLUS  shift 74
	MINUS  shift 75
	TIMES  shift 76
	DIVIDE  shift 77
	ADDONE  shift 78
	MINUSONE  shift 79
	ELETIMES  shift 80
	ELEDIVIDE  shift 81
	AND  shift 82
	OR  shift 83
	COMMA  shift 84
	SEMICOL  shift 102
	COL  shift 85
	ASSIGN  shift 86
	EQUAL  shift 87
	NEQUAL  shift 88
	GT  shift 89
	NLT  shift 90
	LT  shift 91
	NGT  shift 92
	.  error


state 68
	stmt : STRUCT ID . ASSIGN ID LPARE expr_opt RPARE  (28)

	ASSIGN  shift 103
	.  error


state 69
	expr : ID LPARE . expr_opt RPARE  (60)
	expr_opt : .  (29)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	RPARE  reduce 29

	expr_opt  goto 104
	expr  goto 52
	mat_literal  goto 53


state 70
	expr : ID LBRACK . expr RBRACK LBRACK expr RBRACK  (59)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 105
	mat_literal  goto 53


state 71
	expr : ID DOT . ID  (38)

	ID  shift 106
	.  error


state 72
	stmt : typ ID . SEMICOL  (25)
	stmt : typ ID . ASSIGN expr SEMICOL  (26)
	stmt : typ ID . LBRACK INT_LITERAL COMMA INT_LITERAL RBRACK  (27)

	LBRACK  shift 107
	SEMICOL  shift 108
	ASSIGN  shift 109
	.  error


state 73
	stmt : expr_opt SEMICOL .  (18)

	.  reduce 18


state 74
	expr : expr PLUS . expr  (39)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 110
	mat_literal  goto 53


state 75
	expr : expr MINUS . expr  (40)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 111
	mat_literal  goto 53


state 76
	expr : expr TIMES . expr  (41)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 112
	mat_literal  goto 53


state 77
	expr : expr DIVIDE . expr  (42)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 113
	mat_literal  goto 53


state 78
	expr : expr ADDONE .  (43)

	.  reduce 43


state 79
	expr : expr MINUSONE .  (44)

	.  reduce 44


state 80
	expr : expr ELETIMES . expr  (45)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 114
	mat_literal  goto 53


state 81
	expr : expr ELEDIVIDE . expr  (46)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 115
	mat_literal  goto 53


state 82
	expr : expr AND . expr  (53)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 116
	mat_literal  goto 53


state 83
	expr : expr OR . expr  (54)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 117
	mat_literal  goto 53


state 84
	expr : expr COMMA . expr  (55)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 118
	mat_literal  goto 53


state 85
	expr : expr COL .  (62)
	expr : expr COL . expr  (63)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	PLUS  reduce 62
	TIMES  reduce 62
	DIVIDE  reduce 62
	ADDONE  reduce 62
	MINUSONE  reduce 62
	ELETIMES  reduce 62
	ELEDIVIDE  reduce 62
	RPARE  reduce 62
	RBRACK  reduce 62
	AND  reduce 62
	OR  reduce 62
	COMMA  reduce 62
	SEMICOL  reduce 62
	ASSIGN  reduce 62
	EQUAL  reduce 62
	NEQUAL  reduce 62
	GT  reduce 62
	NLT  reduce 62
	LT  reduce 62
	NGT  reduce 62

	expr  goto 119
	mat_literal  goto 53


state 86
	expr : expr ASSIGN . expr  (58)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 120
	mat_literal  goto 53


state 87
	expr : expr EQUAL . expr  (47)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 121
	mat_literal  goto 53


state 88
	expr : expr NEQUAL . expr  (48)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 122
	mat_literal  goto 53


state 89
	expr : expr GT . expr  (51)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 123
	mat_literal  goto 53


state 90
	expr : expr NLT . expr  (52)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 124
	mat_literal  goto 53


state 91
	expr : expr LT . expr  (49)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 125
	mat_literal  goto 53


state 92
	expr : expr NGT . expr  (50)

	MINUS  shift 31
	LPARE  shift 32
	LBRACK  shift 35
	NOT  shift 36
	COL  shift 37
	TRUE  shift 43
	FALSE  shift 44
	INT_LITERAL  shift 45
	FLOAT_LITERAL  shift 46
	STRING_LITERAL  shift 47
	ID  shift 48
	.  error

	expr  goto 126
	mat_literal  goto 53


state 93
	expr : LPARE expr RPARE .  (61)

	.  reduce 61


state 94
	stmt : LBRACE stmt_list RBRACE .  (20)

	.  reduce 20


state 95
	ele : MINUS FLOAT_LITERAL .  (72)

	.  reduce 72


state 96
	mat_literal : LBRACK mat_assembly RBRACK .  (67)

	.  reduce 67


state 97
	mat_assembly : mat_assembly COMMA . ele  (69)

	MINUS  shift 57
	FLOAT_LITERAL  shift 59
	.  error

	ele  goto 127


state 98
	mat_assembly : mat_assembly SEMICOL . ele  (70)

	MINUS  shift 57
	FLOAT_LITERAL  shift 59
	.  error
